--- a/urlShortnenerFrontend/src/app/url-shortener/url-shortener-form/url-shortener-form.component.css
+++ b/urlShortnenerFrontend/src/app/url-shortener/url-shortener-form/url-shortener-form.component.css
@@ -1,62 +1,82 @@
-.formContainer{
+.formContainer {
     margin-top: 30px;
     padding: 40px 10px;
-    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;    border-radius: 30px;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
+        rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+    border-radius: 30px;
     background-color: #ffff;
 }
-.flex-container{
+
+.flex-container {
     display: flex;
     flex-direction: column;
 }
-.flex-container i{
-    color:#FF6969;
-    font-size:18px;
+
+.flex-container i {
+    color: #ff6969;
+    font-size: 18px;
     padding-right: 2px;
 }
-label{
-    padding:10px;
+
+label {
+    padding: 10px;
     padding-left: 0;
 }
-.url-input{
-    width:500px;
-    margin:0px 4px;
+
+.url-input {
+    width: 500px;
+    margin: 0px 4px;
 }
-.buttonContainer{
+
+.buttonContainer {
     display: flex;
     justify-content: center;
     width: 100%;
 }
-.buttonContainer button{
-    width:500px;
+
+.buttonContainer button {
+    width: 500px;
 }
-.customizeContainer{
+
+.customizeContainer {
     display: flex;
     justify-content: space-between;
 }
-.customizeContainer div{
+
+.customizeContainer div {
     padding: 5px;
     width: 100%;
 }
-.customizeContainer div input{
-    width:100%;
+
+.customizeContainer div input {
+    width: 100%;
 }
-.costumizeLabel{
-    padding:0;
-    margin-top:10px;
+
+.costumizeLabel {
+    padding: 0;
+    margin-top: 10px;
 }
-.date{
+
+.date {
     display: flex;
     justify-content: center;
-    margin-top: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 17px;
+    font-size: 14px;
+    flex-direction: column;
+    align-items: center;
 }
-.date input{
-    width:250px;
-    margin:4px;
+
+.date input {
+    width: 250px;
+}
+
+.date label {
+    padding-top: 0;
+    padding-bottom: 2px;
 }
 
 @media (max-width: 800px) {
     .flex-container {
-      flex-direction: column;
+        flex-direction: column;
     }
 }
