--- a/urlShortnenerFrontend/src/app/error-page/error-page.component.css
+++ b/urlShortnenerFrontend/src/app/error-page/error-page.component.css
@@ -1,7 +1,13 @@
-.link-expired{
-    padding:50px;
+.link-expired {
+    padding: 50px;
+    color: #fff;
 }
-.link-expired p{
+
+.link-expired p {
     font-size: 17px;
-    margin:3px 10px;
+    margin: 3px 10px;
+}
+
+.link-expired a {
+    color: red;
 }
