--- a/urlShortnenerFrontend/src/app/url-shortener/url-shortener-tabel/url-shortener-tabel.component.html
+++ b/urlShortnenerFrontend/src/app/url-shortener/url-shortener-tabel/url-shortener-tabel.component.html
@@ -15,15 +15,17 @@
         <tr *ngFor="let url of urls.reverse()">
           <td><a href="{{url.long_url}}">{{url.long_url}}</a></td>
           <td><a href="{{host}}{{url.short_url}}">{{host}}{{url.short_url}}</a></td>
-          <td class="expiredRow"><p *ngIf="hasExpired(url.expired_at);else activeBlock">
-            <i class="fa fa-exclamation-triangle" aria-hidden="true" style="color:red"></i></p>
+          <td class="expiredRow">
+            <p *ngIf="hasExpired(url.expired_at);else activeBlock">
+              <i class="fa fa-exclamation-triangle" aria-hidden="true" style="color:red"></i>
+            </p>
             <ng-template #activeBlock>
               <i class="fa fa-check-circle" aria-hidden="true" style="color:rgb(88, 219, 88)"></i>
             </ng-template>
           </td>
         </tr>
         <tr *ngIf="urls.length===0" class="noTableData">
-            <td colspan="2">No recent URLs in your history</td>
+          <td colspan="2">No recent URLs in your history</td>
         </tr>
       </tbody>
     </table>
